--- a/.github/workflows/build.pull-request.yml
+++ b/.github/workflows/build.pull-request.yml
@@ -2,7 +2,7 @@ name: build.pull_request
 on: pull_request
 jobs:
   build_and_preview:
-    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
+    if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
