Add storage utils

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@intlify/unplugin-vue-i18n": "^6.0.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/chrome": "^0.0.301",
     "@types/eslint": "^9.6.1",
     "@types/eslint__js": "~8.42.3",
     "@types/node": "^22.10.5",
@@ -30,7 +31,6 @@
     "@vueuse/core": "^12.3.0",
     "autoprefixer": "^10.4.20",
     "chalk": "^5.4.1",
-    "chrome-types": "^0.1.329",
     "commander": "^13.0.0",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
