--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,10 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "paths": {
-      "@/*": ["./src/*"],
-      "~/*": ["./src/*"],
-      "src/*": ["./src/*"],
-      "@assets/*": ["./src/assets/*"]
+      "@/*": ["./src/*"]
     },
     "resolveJsonModule": true,
-    "types": [
-      "unplugin-icons/types/vue",
-      "@types/chrome",
-      "@intlify/unplugin-vue-i18n/messages"
-    ],
+    "types": ["unplugin-icons/types/vue", "@types/chrome"],
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
