--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,17 +7,10 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "paths": {
-      "@/*": ["./src/*"],
-      "~/*": ["./src/*"],
-      "src/*": ["./src/*"],
-      "@assets/*": ["./src/assets/*"]
+      "@/*": ["./src/*"]
     },
     "resolveJsonModule": true,
-    "types": [
-      "unplugin-icons/types/vue",
-      "chrome-types",
-      "@intlify/unplugin-vue-i18n/messages"
-    ],
+    "types": ["unplugin-icons/types/vue", "chrome-types"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
